--- a/Areas/Farmer/Views/FarmerShop/Create.cshtml
+++ b/Areas/Farmer/Views/FarmerShop/Create.cshtml
@@ -1,112 +1,79 @@
 ﻿@model OrganicOption.Models.FarmerShop
 
+<h3 class="text-info text-center">Add New Shop</h3>
 
-<h3 class="text-info">Add New Shop</h3>
+<div class="container mt-4">
+    <div class="row justify-content-center">
+        <div class="col-lg-8 col-md-10 col-sm-12">
+            <form asp-action="Create" method="post" enctype="multipart/form-data">
+                <div class="p-4 rounded border">
+                    <div asp-validation-summary="ModelOnly" class="text-danger mb-3"></div>
 
-    <div class="row">
-        <div class="col-lg-3"></div>
-        <div class="col-lg-6">
-        <form asp-action="Create" method="post" enctype="multipart/form-data">
-
-            <div class="p-4 rounded border">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
-                <div class="form-group row">
-                    <div class="col-lg-2">
-                        <label asp-for="ShopName"></label>
+                    <div class="form-group row">
+                        <label asp-for="ShopName" class="col-lg-3 col-form-label"></label>
+                        <div class="col-lg-9">
+                            <input asp-for="ShopName" class="form-control" />
+                            <span asp-validation-for="ShopName" class="text-danger"></span>
+                        </div>
                     </div>
-                    <div class="col-lg-5">
-                        <input asp-for="ShopName" class="form-control" />
+
+                    <div class="form-group row">
+                        <label class="col-lg-3 col-form-label">Is Open:</label>
+                        <div class="col-lg-9">
+                            <input type="checkbox" asp-for="IsShopOpen" />
+                        </div>
                     </div>
-                    <span asp-validation-for="ShopName" class="text-danger"></span>
+
+                    <div class="form-group row">
+                        <label class="col-lg-3 col-form-label">Cover Photo:</label>
+                        <div class="col-lg-9">
+                            <input asp-for="CoverPhoto" class="form-control" type="file" />
+                            <span asp-validation-for="CoverPhoto" class="text-danger"></span>
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label class="col-lg-3 col-form-label">Latitude:</label>
+                        <div class="col-lg-9">
+                            <input type="text" asp-for="Latitude" class="form-control" />
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label class="col-lg-3 col-form-label">Longitude:</label>
+                        <div class="col-lg-9">
+                            <input type="text" asp-for="Longitude" class="form-control" />
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label class="col-lg-3 col-form-label">Contract Information:</label>
+                        <div class="col-lg-9">
+                            <input type="text" asp-for="ContractInfo" class="form-control" />
+                            <span asp-validation-for="ContractInfo" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-lg-3 col-form-label">NID:</label>
+                        <div class="col-lg-9">
+                            <input type="text" asp-for="NID" class="form-control" />
+                            <span asp-validation-for="NID" class="text-danger"></span>
+                        </div>
+                    </div>
+
+                    <input type="hidden" asp-for="FarmerUserId" value="@User.Identity.Name" />
+
+                    <div class="form-group text-center mt-4">
+                        <input type="submit" class="btn btn-primary" value="Save" />
+                    </div>
                 </div>
-
-                <div class="form-group row">
-                    <div class="col-lg-2">
-                        <label>Is Open:</label>
-                    </div>
-                    <div class="col-lg-5">
-
-                        <input type="checkbox" asp-for="IsShopOpen" />
-                    </div>
-
-                </div>
-
-
-   
-
-                <div class="form-group row">
-                    <div class="col-lg-2">
-                        <label> Cover Photo:</label>
-                    </div>
-                    <div class="col-lg-5">
-                        <input asp-for="CoverPhoto" class="form-control" type="file" />
-                    </div>
-                    <span asp-validation-for="CoverPhoto" class="text-danger"></span>
-                </div>
-
-
-              
-
-                <div class="form-group row">
-                    <div class="col-lg-2">
-                        <label>Latitude:</label>
-                    </div>
-                    <div class="col-lg-5">
-                        <input type="text" asp-for="Latitude" class="form-control" />
-                    </div>
-
-                </div>
-
-
-                <div class="form-group row">
-                    <div class="col-lg-2">
-                        <label>Longitude:</label>
-                    </div>
-                    <div class="col-lg-5">
-                        <input type="text" asp-for="Longitude" class="form-control" />
-                    </div>
-
-                </div>
-
-                <div class="form-group row">
-                    <div class="col-lg-2">
-                        <label>Contract Information:</label>
-                    </div>
-                    <div class="col-lg-5">
-                        <input type="text" asp-for="ContractInfo" />
-                        <span asp-validation-for="ContractInfo"></span>
-                    </div>
-
-                </div>
-
-
-
-
-                <input type="hidden" asp-for="FarmerUserId" value="@User.Identity.Name" />
-
-
-
-                <div class="form-group">
-                    <input type="submit" class="btn btn-primary" value="Save" />
-
-                </div>
-
-
-            </div>
-            <div class="col-lg-2"></div>
-        </form>
-
-
-
-
+            </form>
         </div>
-        <div class="col-lg-3"></div>
     </div>
+</div>
 
-@section Scripts{
+@section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
 }
-
