--- a/Areas/Farmer/Views/FarmerShop/Delete.cshtml
+++ b/Areas/Farmer/Views/FarmerShop/Delete.cshtml
@@ -1,25 +1,29 @@
 ﻿@model OrganicOption.Models.FarmerShop
 
-<h3 class="text-danger">Confirm Delete</h3>
+<div class="container mt-5">
+ 
 
-<div class="p-4 rounded border">
-    <p>Are you sure you want to delete this shop?</p>
-    <dl class="row">
-        <dt class="col-sm-2">
-            Shop Name:
-        </dt>
-        <dd class="col-sm-10">
-            @Model.ShopName
-        </dd>
-    </dl>
-    <form asp-action="Delete" method="post">
-        <br />
-        <input type="hidden" asp-for="Id" />
-        <h4>Do you want to delete shop? </h4>
-        <br />
-        <div class="form-group">
-            <input type="submit" value="Delete" class="btn btn-danger" />
-            <a asp-action="Index" class="btn btn-secondary">Cancel</a>
-        </div>
-    </form>
+    <div class="p-4 rounded border text-center justify-content-center" style="width:506px">
+        <h3 class="text-danger text-center">Confirm Delete</h3>
+        <p class="text-center">Are you sure you want to delete this shop?</p>
+
+        <dl class="row mb-4">
+         
+                
+          
+            <dd class="col-sm-8 col-md-9 col-lg-10">
+                Shop Name: @Model.ShopName
+            </dd>
+        </dl>
+
+        <form asp-action="Delete" method="post" class="text-center">
+            <input type="hidden" asp-for="Id" />
+            <h4 class="mb-4">Do you want to delete this shop?</h4>
+
+            <div class="form-group">
+                <input type="submit" value="Delete" class="btn btn-danger mr-2" />
+                <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+            </div>
+        </form>
+    </div>
 </div>
