--- a/Areas/Farmer/Views/FarmerShop/ShopExist.cshtml
+++ b/Areas/Farmer/Views/FarmerShop/ShopExist.cshtml
@@ -1,7 +1,5 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-
+﻿<div class="container my-4">
+    <div class="row justify-content-center">
 <h4>Shop Already Exist</h4>
+</div>
+</div>
