--- a/Areas/Customer/Views/Home/Index.cshtml
+++ b/Areas/Customer/Views/Home/Index.cshtml
@@ -27,6 +27,7 @@
     count = products.Count();
 }
 
+
 <!-- category div start -->
 <div class="container my-4">
     <div class="row">
@@ -576,7 +577,7 @@
                                     </div>
                                     <div class="action_links">
                                         <ul>
-                                            <li class="wishlist"><a asp-action="Detail" asp-controller="Home" asp-route-id="@product.Id" title=" Wishlist"><i class="fa fa-heart-o" aria-hidden="true"></i></a></li>
+                                           
                                             <li class="add_to_cart"><a asp-action="Detail" asp-controller="Home" asp-route-id="@product.Id" title="add to cart"><i class="zmdi zmdi-shopping-cart-plus"></i> Buy Now</a></li>
 
                                         </ul>
@@ -598,7 +599,7 @@
             <div class="col-lg-6 col-md-6">
                 <div class="single_banner">
                     <div class="banner_thumb">
-                        <a asp-area="" asp-controller="Home" asp-action="Products"> <img src="~/img/bg/fish.png" alt=""></a>
+                        <a asp-area="" asp-controller="Home" asp-action="Products"> <img src="~/img/bg/fish.png" style="height:220px" alt=""></a>
                     </div>
 
                 </div>
