--- a/Areas/Farmer/Views/Inventory/AllOrdersGroupedByDate.cshtml
+++ b/Areas/Farmer/Views/Inventory/AllOrdersGroupedByDate.cshtml
@@ -1,132 +1,77 @@
-﻿@* @model List<IGrouping<DateTime, OrganicOption.Models.Farmer_Section.DailyOrderInfoViewModel>>
+﻿@model List<IGrouping<DateTime, OrganicOption.Models.Farmer_Section.DailyOrderInfoViewModel>>
 
+<div class="container mt-4">
+    <div class="row mb-4">
+        <div class="col-md-6">
+            <a asp-action="MyDailyOrders" asp-area="Farmer" asp-controller="Inventory" class="btn btn-info w-100 mb-2">Daily Order</a>
+        </div>
+        <div class="col-md-6">
+            <a asp-action="WeeklyOrders" asp-area="Farmer" asp-controller="Inventory" class="btn btn-info w-100">Weekly Order</a>
+        </div>
+    </div>
 
-    <br />
-    <br />
-<a asp-action="MyDailyOrders" asp-area="Farmer" asp-controller="Inventory" class="btn btn-info"> Daily Order</a>
-<a asp-action="WeeklyOrders" asp-area="Farmer" asp-controller="Inventory" class="btn btn-info"> Weekly Order</a>
-<br />
-<br />
-@foreach (var group in Model)
-{
-    <h4>@group.Key.ToShortDateString()</h4>
-
-    @if (group.Any())
+    @foreach (var group in Model)
     {
-        <div class="table-responsive">
-            <table class="table table-striped table-bordered">
-                <thead class="thead-dark">
-                    <tr>
-                        <th scope="col">Order ID</th>
-                        <th scope="col">Customer Name</th>
-                        <th scope="col">Phone</th>
-                        <th scope="col">Order Time</th>
-                        <th scope="col">Products</th>
-                        <th scope="col">Total Price</th>
-                        <th scope="col">Order Condition</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var orderInfo in group)
-                    {
-                        <tr>
-                            <td>@orderInfo.OrderId</td>
-                            <td>@orderInfo.CustomerName</td>
-                            <td>@orderInfo.Phone</td>
-                            <td>@orderInfo.OrderTme.ToString("dd/MM/yyyy HH:mm")</td>
-                            <td>
-                                <ul>
-                                    @foreach (var productInfo in orderInfo.Products)
-                                    {
-                                        <li>@productInfo.Name - Quantity: @productInfo.Quantity - Price: @productInfo.Price</li>
-                                    }
-                                </ul>
-                            </td>
-                            <td>@orderInfo.TotalPrice</td>
-                          
-                            <td><a class="btn">Release</a></td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
+        <div class="order-group mb-5">
+            <h4 class="text-primary mb-3">@group.Key.ToShortDateString()</h4>
+
+            @if (group.Any())
+            {
+                <div class="table-responsive">
+                    <table class="table table-striped table-bordered">
+                        <thead class="thead-dark">
+                            <tr>
+                                <th scope="col">Order ID</th>
+                                <th scope="col">Customer Name</th>
+                                <th scope="col">Phone</th>
+                                <th scope="col">Order Time</th>
+                                <th scope="col">Products</th>
+                                <th scope="col">Total Price</th>
+                                <th scope="col">Order Condition</th>
+                                <th scope="col">Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var orderInfo in group)
+                            {
+                                <tr>
+                                    <td>@orderInfo.OrderId</td>
+                                    <td>@orderInfo.CustomerName</td>
+                                    <td>@orderInfo.Phone</td>
+                                    <td>@orderInfo.OrderTme.ToString("dd/MM/yyyy HH:mm")</td>
+                                    <td>
+                                        <ul class="list-unstyled mb-0">
+                                            @foreach (var productInfo in orderInfo.Products)
+                                            {
+                                                <li><strong>@productInfo.Name</strong> - Quantity: @productInfo.Quantity - Price: @productInfo.Price</li>
+                                            }
+                                        </ul>
+                                    </td>
+                                    <td>@orderInfo.TotalPrice</td>
+                                    <td>@orderInfo.OrderCondition</td>
+                                    <td>
+                                        @if (orderInfo.OrderCondition == OrderCondition.OrderTaken)
+                                        {
+                                            <form asp-action="ReleaseOrder" method="post">
+                                                <input type="hidden" name="orderId" value="@orderInfo.OrderId" />
+                                                <button type="submit" class="btn btn-info">Release</button>
+                                            </form>
+                                        }
+                                        else
+                                        {
+                                            <button class="btn btn-secondary" disabled>@orderInfo.OrderCondition</button>
+                                        }
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            }
+            else
+            {
+                <p>No orders found for this date.</p>
+            }
         </div>
     }
-    else
-    {
-        <p>No orders found for this date.</p>
-    }
-}
- *@
-
-
-
-@model List<IGrouping<DateTime, OrganicOption.Models.Farmer_Section.DailyOrderInfoViewModel>>
-
-<br />
-<br />
-<a asp-action="MyDailyOrders" asp-area="Farmer" asp-controller="Inventory" class="btn btn-info">Daily Order</a>
-<a asp-action="WeeklyOrders" asp-area="Farmer" asp-controller="Inventory" class="btn btn-info">Weekly Order</a>
-<br />
-<br />
-@foreach (var group in Model)
-{
-    <h4>@group.Key.ToShortDateString()</h4>
-
-    @if (group.Any())
-    {
-        <div class="table-responsive">
-            <table class="table table-striped table-bordered">
-                <thead class="thead-dark">
-                    <tr>
-                        <th scope="col">Order ID</th>
-                        <th scope="col">Customer Name</th>
-                        <th scope="col">Phone</th>
-                        <th scope="col">Order Time</th>
-                        <th scope="col">Products</th>
-                        <th scope="col">Total Price</th>
-                        <th scope="col">Order Condition</th>
-                        <th scope="col">Action</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var orderInfo in group)
-                    {
-                        <tr>
-                            <td>@orderInfo.OrderId</td>
-                            <td>@orderInfo.CustomerName</td>
-                            <td>@orderInfo.Phone</td>
-                            <td>@orderInfo.OrderTme.ToString("dd/MM/yyyy HH:mm")</td>
-                            <td>
-                                <ul>
-                                    @foreach (var productInfo in orderInfo.Products)
-                                    {
-                                        <li>@productInfo.Name - Quantity: @productInfo.Quantity - Price: @productInfo.Price</li>
-                                    }
-                                </ul>
-                            </td>
-                            <td>@orderInfo.TotalPrice</td>
-                            <td>@orderInfo.OrderCondition</td>
-                            <td>
-                                @if ( orderInfo.OrderCondition == OrderCondition.OrderTaken)
-                                {
-                                    <form asp-action="ReleaseOrder" method="post">
-                                        <input type="hidden" name="orderId" value="@orderInfo.OrderId" />
-                                        <button type="submit" class="btn btn-info">Release</button>
-                                    </form>
-                                }
-                                else
-                                {
-                                    <button class="btn btn-secondary" disabled>@orderInfo.OrderCondition</button>
-                                }
-                            </td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
-        </div>
-    }
-    else
-    {
-        <p>No orders found for this date.</p>
-    }
-}
+</div>
