Inventory Orders UI modification

--- a/Areas/Farmer/Views/Inventory/AllOrdersGroupedByDate.cshtml
+++ b/Areas/Farmer/Views/Inventory/AllOrdersGroupedByDate.cshtml
@@ -1,6 +1,7 @@
 ﻿@model List<IGrouping<DateTime, OrganicOption.Models.Farmer_Section.DailyOrderInfoViewModel>>
 
 <div class="container mt-4">
+    <a href="javascript:history.back()" class="btn btn-secondary mb-3"><i class="fa fa-arrow-left"></i> Back</a>
     <div class="row mb-4">
         <div class="col-md-3">
             <a asp-action="MyDailyOrders" asp-area="Farmer" asp-controller="Inventory" class="btn btn-info w-100 mb-2">Daily Order</a>
