--- a/Areas/Farmer/Views/Inventory/MyDailyOrders.cshtml
+++ b/Areas/Farmer/Views/Inventory/MyDailyOrders.cshtml
@@ -1,6 +1,7 @@
 ﻿@model List<OrganicOption.Models.Farmer_Section.DailyOrderInfoViewModel>
 
 <div class="container mt-4">
+    <a href="javascript:history.back()" class="btn btn-secondary mb-3"><i class="fa fa-arrow-left"></i> Back</a>
     <h4 class="mb-3">Daily Orders</h4>
 
     @if (Model.Any())
