--- a/Areas/Farmer/Views/Inventory/ShowAllProductsByTime.cshtml
+++ b/Areas/Farmer/Views/Inventory/ShowAllProductsByTime.cshtml
@@ -4,7 +4,8 @@
     ViewData["Title"] = "All Products";
 }
 
-<div class="container">
+<div class="container mt-2">
+    <a href="javascript:history.back()" class="btn btn-secondary mb-3"><i class="fa fa-arrow-left"></i> Back</a>
     <div class="row">
         <div class="table-responsive">
             <table class="display table table-striped border" style="margin-top:15px">
