--- a/Areas/Farmer/Views/Inventory/WeeklyOrders.cshtml
+++ b/Areas/Farmer/Views/Inventory/WeeklyOrders.cshtml
@@ -1,109 +1,54 @@
 ﻿@model List<IGrouping<DateTime, OrganicOption.Models.Farmer_Section.DailyOrderInfoViewModel>>
 
-@foreach (var group in Model)
-{
-    <h4>@group.Key.ToShortDateString()</h4>
+<div class="container mt-4">
+    <a href="javascript:history.back()" class="btn btn-secondary mb-3"><i class="fa fa-arrow-left"></i> Back</a>
 
-    @if (group.Any())
+    @foreach (var group in Model)
     {
-        <div class="table-responsive">
-            <table class="table table-striped table-bordered">
-                <thead class="thead-dark">
-                    <tr>
-                        <th scope="col">Order ID</th>
-                        <th scope="col">Customer Name</th>
-                        <th scope="col">Phone</th>
-                        <th scope="col">Order Time</th>
-                        <th scope="col">Products</th>
-                        <th scope="col">Total Price</th>
-                        <th scope="col">Order Condition</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var orderInfo in group)
-                    {
+        <h4 class="mb-3">@group.Key.ToShortDateString()</h4>
+
+        @if (group.Any())
+        {
+            <div class="table-responsive">
+                <table class="table table-striped table-bordered">
+                    <thead class="thead-dark">
                         <tr>
-                            <td>@orderInfo.OrderId</td>
-                            <td>@orderInfo.CustomerName</td>
-                            <td>@orderInfo.Phone</td>
-                            <td>@orderInfo.OrderTme.ToString("dd/MM/yyyy HH:mm")</td>
-                            <td>
-                                <ul>
-                                    @foreach (var productInfo in orderInfo.Products)
-                                    {
-                                        <li>@productInfo.Name - Quantity: @productInfo.Quantity - Price: @productInfo.Price</li>
-                                    }
-                                </ul>
-                            </td>
-                            <td>@orderInfo.TotalPrice</td>
-                            <td>@orderInfo.OrderCondition</td>
+                            <th scope="col">Order ID</th>
+                            <th scope="col">Customer Name</th>
+                            <th scope="col">Phone</th>
+                            <th scope="col">Order Time</th>
+                            <th scope="col">Products</th>
+                            <th scope="col">Total Price</th>
+                            <th scope="col">Order Condition</th>
                         </tr>
-                    }
-                </tbody>
-            </table>
-        </div>
+                    </thead>
+                    <tbody>
+                        @foreach (var orderInfo in group)
+                        {
+                            <tr>
+                                <td>@orderInfo.OrderId</td>
+                                <td>@orderInfo.CustomerName</td>
+                                <td>@orderInfo.Phone</td>
+                                <td>@orderInfo.OrderTme.ToString("dd/MM/yyyy HH:mm")</td>
+                                <td>
+                                    <ul class="list-unstyled mb-0">
+                                        @foreach (var productInfo in orderInfo.Products)
+                                        {
+                                            <li><strong>@productInfo.Name</strong> - Qty: @productInfo.Quantity - Price: @productInfo.Price</li>
+                                        }
+                                    </ul>
+                                </td>
+                                <td>@orderInfo.TotalPrice</td>
+                                <td>@orderInfo.OrderCondition</td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        }
+        else
+        {
+            <h4>No orders found for this date.</h4>
+        }
     }
-    else
-    {
-        <p>No orders found for this date.</p>
-    }
-}
-
-
-
-
-@* 
-
-
-
-@model List<OrganicOption.Models.Farmer_Section.DailyOrderInfoViewModel> *@
-@* 
-<h4>Weekly Orders</h4>
-
-@if (Model.Any())
-{
-    <div class="table-responsive">
-
-        <table class="table table-striped table-bordered">
-            <thead class="thead-dark">
-                <tr>
-                    <th scope="col">Order ID</th>
-                    <th scope="col">Customer Name</th>
-                             <th scope="col">Address</th>
-                    <th scope="col">Phone</th>
-                    <th scope="col">Order Time</th>
-                    <th scope="col">Products</th>
-                    <th scope="col">Total Price</th>
-                    <th scope="col">Order Condition</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var orderInfo in Model)
-                {
-                    <tr>
-                        <td>@orderInfo.OrderId</td>
-                        <td>@orderInfo.CustomerName</td>
-                                        <td>@orderInfo.Address</td>
-                        <td>@orderInfo.Phone</td>
-                        <td>@orderInfo.OrderTme.ToString("dd/MM/yyyy HH:mm")</td>
-                        <td>
-                            <ul>
-                                @foreach (var productInfo in orderInfo.Products)
-                                {
-                                    <li>@productInfo.Name  -  Quantity: @productInfo.Quantity  - Price: @productInfo.Price</li>
-                                }
-                            </ul>
-                        </td>
-                        <td>@orderInfo.TotalPrice</td>
-                        <td> <a class="btn"> Release </a></td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
-}
-else
-{
-    <p>No orders found for today.</p>
-}
- *@
+</div>
