--- a/Areas/Farmer/Views/Inventory/Index.cshtml
+++ b/Areas/Farmer/Views/Inventory/Index.cshtml
@@ -3,138 +3,102 @@
 @{
     ViewData["Title"] = "Sales Information";
 }
-<br />
-<div class="row">
-    <div class="col-md-4"></div>
-    <div class="col-md-4 text-center">
 
-        <h4>@ViewData["Title"]</h4>
-        <br />
-        <h4>Total  Sold Price : @ViewBag.TotalSumPriceSold.ToString("F2")</h4>
-        <br />
+<div class="container mt-4">
+    <a href="javascript:history.back()" class="btn btn-secondary mb-3"><i class="fa fa-arrow-left"></i> Back</a>
+    <div class="row mb-3">
+       
+        <div class="col-md-4"></div>
+        <div class="col-md-4 text-center">
+            <h3>@ViewData["Title"]</h3>
+            <hr>
+            <h4>Total Sold Price: @ViewBag.TotalSumPriceSold.ToString("F2") Tk</h4>
+        </div>
+        <div class="col-md-4 text-right">
+            <a asp-action="ShowAllProductsByTime" asp-area="Farmer" asp-controller="Inventory" class="btn btn-info mb-2">All Products</a>
+            <a asp-action="ShowSoldProducts" asp-area="Farmer" asp-controller="Inventory" class="btn btn-info mb-2">Daily Sold Products</a>
+        </div>
     </div>
-    <div class="col-md-4">
-        <a asp-action="ShowAllProductsByTime" asp-area="Farmer" asp-controller="Inventory" class="btn btn-info"> All Products</a>
-        <a asp-action="ShowSoldProducts" asp-area="Farmer" asp-controller="Inventory" class="btn btn-info"> Show Sold Products</a>
-    </div>
+
+    @if (ViewBag.SalesInfo != null && ViewBag.SalesInfo.Count > 0)
+    {
+        <div class="table-responsive mb-4">
+            <table class="table table-striped table-bordered">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>Product ID</th>
+                        <th>Total Product Sold</th>
+                        <th>Quantity</th>
+                        <th>Total Price </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in ViewBag.SalesInfo)
+                    {
+                        <tr>
+                            <td>@item.ProductId</td>
+                            <td>@item.TotalItemsSold</td>
+                            <td>@item.TotalQuantitySold</td>
+                            <td>@item.TotalPriceSold.ToString("F2") Tk</td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    }
+    else
+    {
+        <h4>No sales information available.</h4>
+    }
+
+    @if (ViewBag.TotalSoldProduct != null && ViewBag.TotalSoldProduct.Count > 0)
+    {
+        <div class="row">
+            @foreach (var product in ViewBag.TotalSoldProduct)
+            {
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100">
+                        <img class="card-img-top" src="~/@product.Image" alt="@product.Name" style="max-height: 250px; object-fit: cover;">
+                        <div class="card-body">
+                            <h5 class="card-title">@product.Name</h5>
+                            <p class="card-text">Price: @product.Price Tk</p>
+                            <p class="card-text">Remaining Quantity: @product.Quantity</p>
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+    }
+
+    <br />
+    <h3 class="mt-4 mb-4 text-center justify-content-center"> Unsold Products</h3>
+    <hr />
+    @if (ViewBag.UnsoldProduct != null && ViewBag.UnsoldProduct.Count > 0)
+    {
+        <div class="row">
+            @foreach (var product in ViewBag.UnsoldProduct)
+            {
+                <div class="col-md-4 mb-4">
+                    <div class="card h-100">
+                        <img class="card-img-top" src="~/@product.Image" alt="@product.Name" style="max-height: 250px;  object-fit: cover; ">
+                        <div class="card-body">
+                            <h5 class="card-title">@product.Name</h5>
+                            <p class="card-text">Quantity: @product.Quantity</p>
+                            <p class="card-text">Price: @product.Price</p>
+                            @{
+                                Decimal Price = @product.Price;
+                                Decimal Quantity = @product.Quantity;
+                                Decimal TotalPrice = Price * Quantity;
+                            }
+                            <p class="card-text"><strong>Total Price: @TotalPrice</strong></p>
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+    }
+    else
+    {
+        <h4>No unsold products available.</h4>
+    }
 </div>
-
-
-@if (ViewBag.SalesInfo != null && ViewBag.SalesInfo.Count > 0)
-{
-    <div class="table-responsive">
-        <table class="table table-striped table-bordered">
-            <thead>
-                <tr>
-                    <th>Product ID</th>
-                    <th>Total Product Sold</th>
-                    <th> Quantity </th>
-                    <th>Total Price </th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var item in ViewBag.SalesInfo)
-                {
-                    <tr>
-                        <td>@item.ProductId</td>
-                        <td>@item.TotalItemsSold</td>
-                        <td>@item.TotalQuantitySold</td>
-                        <td>@item.TotalPriceSold.ToString("F2")</td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
-
-
-}
-else
-{
-    <p>No sales information available.</p>
-}
-
-
-
-@if (ViewBag.TotalSoldProduct != null && ViewBag.TotalSoldProduct.Count > 0)
-{
-    <div class="table-responsive">
-        <table class="table table-striped table-bordered">
-            <thead>
-                <tr>
-                    <th>Product Name</th>
-                    <th>Image</th>
-                    <th>Product Price</th>
-                    <th>Remainng Quantity </th>
-                   
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var product in ViewBag.TotalSoldProduct)
-                {
-                    <tr>
-                        <td>@product.Name</td>
-                        <td><img src="~/@product.Image" style="max-width: 50px; max-height: 50px;" /></td>
-                        <td>@product.Price</td>
-                        <td>@product.Quantity</td>
-                       
-
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
-}
-
-<br />
-
-
-@{
-    ViewData["Title"] = "Unsold Products";
-}
-
-<h5>@ViewData["Title"]</h5>
-<br />
-
-@if (ViewBag.UnsoldProduct != null && ViewBag.UnsoldProduct.Count > 0)
-{
-    <div class="table-responsive">
-        <table class="table table-striped table-bordered">
-            <thead>
-                <tr>
-                    <th>Product Name</th>
-                    <th>Image</th>
-                    <th>Product Quantity</th>
-                    <th>Product Price</th>
-                    <th>Sum of Price</th>
-                  
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var product in ViewBag.UnsoldProduct)
-                {
-                    <tr>
-                        <td>@product.Name</td>
-
-                        <td><img src="~/@product.Image" style="max-width: 50px; max-height: 50px;" /></td>
-
-                        <td>@product.Quantity</td>
-                        <td>@product.Price</td>
-                        @{
-                            Decimal Price = @product.Price;
-                            Decimal Quantity = @product.Quantity;
-                            Decimal TotalPrice = Price * Quantity;
-                            <td>@TotalPrice</td>
-                        }
-               
-                        
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
-}
-else
-{
-    <p>No unsold products available.</p>
-}
-
