--- a/Areas/Farmer/Views/Inventory/WithdrawHistory.cshtml
+++ b/Areas/Farmer/Views/Inventory/WithdrawHistory.cshtml
@@ -1,8 +1,10 @@
 ﻿@model IEnumerable<OrganicOption.Models.WithdrawalHistory>
-
+<br />
 
 <div class="container">
-    <h2>Withdraw History</h2>
+
+    <a href="javascript:history.back()" class="btn btn-secondary mb-3"><i class="fa fa-arrow-left"></i> Back</a>
+    <h4 class="text-center justify-content-center">Withdraw History</h4>
 
     <table class="table table-bordered mt-4">
         <thead>
