Shop Info Modification

--- a/Areas/Farmer/Views/FarmerShop/Shop.cshtml
+++ b/Areas/Farmer/Views/FarmerShop/Shop.cshtml
@@ -12,7 +12,7 @@
         {
             <p>No cover photo available</p>
         }
-        <div class="col-md-4 mt-30">
+        <div class="col-md-4 mt-50" style="margin:10px">
             <h3>@Model.FarmerShop.ShopName</h3>
             <h4> Phone: @Model.FarmerShop.ContractInfo</h4>
             <p><strong>Shop is :</strong> @(Model.FarmerShop.IsShopOpen ? "Open" : "Closed")</p>
